--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -25,6 +25,18 @@
     </div>
 
     <div>
+      <mat-form-field class="form-field width-100">
+        <mat-label>E-Mail</mat-label>
+        <input [disabled]="loading" matInput type="text" [(ngModel)]="user.email">
+        @if (user.email) {
+        <button matSuffix mat-icon-button (click)="user.email=''">
+          <mat-icon>close</mat-icon>
+        </button>
+        }
+      </mat-form-field>
+    </div>
+
+    <div>
       <mat-form-field class="width-100">
         <mat-label>Choose a date</mat-label>
         <input [disabled]="loading" matInput [matDatepicker]="picker" [(ngModel)]="birthDate">
@@ -70,7 +82,7 @@
 
   </mat-dialog-content>
   <mat-dialog-actions>
-    <button mat-button mat-dialog-close>Close</button>
+    <button mat-button (click)="dialog.closeAll()">Close</button>
     <button mat-button (click)="saveUser()">Save</button>
   </mat-dialog-actions>
 </div>
