--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,21 +1,21 @@
-  <mat-card appearance="outlined">
-    <table>
-      <tr>
-        <th>Name</th>
-        <th>E-Mail</th>
-        <th>City</th>
-      </tr>
-      <!-- @for (item of loadedUsers; track item; let i = $index) { -->
-      <tr *ngFor="let item of loadedUsers; let i = index">
-        <td>{{ item.firstName }} {{ item.lastName }}</td>
-        <td>{{ item.email }}</td>
-        <td>{{ item.city }} </td>
-      </tr>
-    <!-- } -->
-    </table>
-  </mat-card>
+<mat-card appearance="outlined">
+  <table>
+    <tr>
+      <th>Name</th>
+      <th>E-Mail</th>
+      <th>City</th>
+    </tr>
+    @for (item of loadedUsers; track item; let i = $index) {
+    <tr [routerLink]="['/user/' + item.id]">
+      <td>{{ item.firstName }} {{ item.lastName }}</td>
+      <td>{{ item.email }}</td>
+      <td>{{ item.city }} </td>
+    </tr>
+    }
+  </table>
+</mat-card>
 
 
 <button (click)="openDialog()" mat-fab class="addbtn" matTooltip="Add new User" [matTooltipPosition]="'above'">
-    <mat-icon>add</mat-icon>
-  </button>
+  <mat-icon>add</mat-icon>
+</button>
