--- a/src/app/dialog-add-user/dialog-add-user.component.html
+++ b/src/app/dialog-add-user/dialog-add-user.component.html
@@ -1,88 +1,94 @@
 <div class="overview-container">
   <mat-progress-bar *ngIf="loading" mode="indeterminate"></mat-progress-bar>
   <h2 mat-dialog-title>Add User</h2>
-  <mat-dialog-content>
-    <div>
-      <mat-form-field class="form-field mr-16">
-        <mat-label>First name</mat-label>
-        <input [disabled]="loading" matInput type="text" [(ngModel)]="user.firstName">
-        @if (user.firstName) {
-        <button matSuffix mat-icon-button (click)="user.firstName=''">
-          <mat-icon>close</mat-icon>
-        </button>
-        }
-      </mat-form-field>
+  <form (ngSubmit)="saveUser(contactForm)" #contactForm="ngForm">
 
-      <mat-form-field class="form-field">
-        <mat-label>Last name</mat-label>
-        <input [disabled]="loading" matInput type="text" [(ngModel)]="user.lastName">
-        @if (user.lastName) {
-        <button matSuffix mat-icon-button (click)="user.lastName=''">
-          <mat-icon>close</mat-icon>
-        </button>
-        }
-      </mat-form-field>
-    </div>
+    <mat-dialog-content>
+      <div>
+        <mat-form-field class="form-field mr-16">
+          <mat-label>First name</mat-label>
+          <input [disabled]="loading" matInput type="text" [(ngModel)]="user.firstName" name="firstName" required>
+          @if (user.firstName) {
+          <button matSuffix mat-icon-button (click)="user.firstName=''">
+            <mat-icon>close</mat-icon>
+          </button>
+          }
+        </mat-form-field>
 
-    <div>
-      <mat-form-field class="form-field width-100">
-        <mat-label>E-Mail</mat-label>
-        <input [disabled]="loading" matInput type="text" [(ngModel)]="user.email">
-        @if (user.email) {
-        <button matSuffix mat-icon-button (click)="user.email=''">
-          <mat-icon>close</mat-icon>
-        </button>
-        }
-      </mat-form-field>
-    </div>
+        <mat-form-field class="form-field">
+          <mat-label>Last name</mat-label>
+          <input [disabled]="loading" matInput type="text" [(ngModel)]="user.lastName" name="lastName" required>
+          @if (user.lastName) {
+          <button matSuffix mat-icon-button (click)="user.lastName=''">
+            <mat-icon>close</mat-icon>
+          </button>
+          }
+        </mat-form-field>
+      </div>
 
-    <div>
-      <mat-form-field class="width-100">
-        <mat-label>Choose a date</mat-label>
-        <input [disabled]="loading" matInput [matDatepicker]="picker" [(ngModel)]="birthDate">
-        <mat-hint>MM/DD/YYYY</mat-hint>
-        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-datepicker #picker></mat-datepicker>
-      </mat-form-field>
-    </div>
+      <div>
+        <mat-form-field class="form-field width-100">
+          <mat-label>E-Mail</mat-label>
+          <input [disabled]="loading" matInput type="text" pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"
+            [(ngModel)]="user.email" name="E-Mail" required>
+          @if (user.email) {
+          <button matSuffix mat-icon-button (click)="user.email=''">
+            <mat-icon>close</mat-icon>
+          </button>
+          }
+        </mat-form-field>
+      </div>
 
-    <div>
-      <mat-form-field class="form-field width-100">
-        <mat-label>Street + House No.</mat-label>
-        <input [disabled]="loading" matInput type="text" [(ngModel)]="user.street">
-        @if (user.street) {
-        <button matSuffix mat-icon-button (click)="user.street=''">
-          <mat-icon>close</mat-icon>
-        </button>
-        }
-      </mat-form-field>
-    </div>
+      <div>
+        <mat-form-field class="width-100">
+          <mat-label>Choose a date</mat-label>
+          <input [disabled]="loading" matInput [matDatepicker]="picker" [(ngModel)]="birthDate" name="birthDate" required>
+          <mat-hint>MM/DD/YYYY</mat-hint>
+          <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+      </div>
 
-    <div>
-      <mat-form-field class="form-field mr-16">
-        <mat-label>Zip Code</mat-label>
-        <input [disabled]="loading" matInput type="number" maxlength="9" pattern="[0-9]{9}" [(ngModel)]="user.zipCode">
-        @if (user.zipCode) {
-        <button matSuffix mat-icon-button (click)="user.zipCode=0">
-          <mat-icon>close</mat-icon>
-        </button>
-        }
-      </mat-form-field>
+      <div>
+        <mat-form-field class="form-field width-100">
+          <mat-label>Street + House No.</mat-label>
+          <input [disabled]="loading" matInput type="text" [(ngModel)]="user.street" name="street" required>
+          @if (user.street) {
+          <button matSuffix mat-icon-button (click)="user.street=''">
+            <mat-icon>close</mat-icon>
+          </button>
+          }
+        </mat-form-field>
+      </div>
 
-      <mat-form-field class="form-field">
-        <mat-label>City</mat-label>
-        <input [disabled]="loading" matInput type="text" [(ngModel)]="user.city">
-        @if (user.city) {
-        <button matSuffix mat-icon-button (click)="user.city=''">
-          <mat-icon>close</mat-icon>
-        </button>
-        }
-      </mat-form-field>
-    </div>
+      <div>
+        <mat-form-field class="form-field mr-16">
+          <mat-label>Zip Code</mat-label>
+          <input [disabled]="loading" matInput type="text" minlength="4" maxlength="9" pattern="[0-9]+"
+            [(ngModel)]="user.zipCode" name="zipCode" required>
+          @if (user.zipCode) {
+          <button matSuffix mat-icon-button (click)="user.zipCode=0">
+            <mat-icon>close</mat-icon>
+          </button>
+          }
+        </mat-form-field>
 
-  </mat-dialog-content>
-  <mat-dialog-actions>
-    <button mat-button (click)="dialog.closeAll()">Close</button>
-    <button mat-button (click)="saveUser()">Save</button>
-  </mat-dialog-actions>
+        <mat-form-field class="form-field">
+          <mat-label>City</mat-label>
+          <input [disabled]="loading" matInput type="text" [(ngModel)]="user.city" name="city" required>
+          @if (user.city) {
+          <button matSuffix mat-icon-button (click)="user.city=''">
+            <mat-icon>close</mat-icon>
+          </button>
+          }
+        </mat-form-field>
+      </div>
+
+    </mat-dialog-content>
+    <mat-dialog-actions>
+      <button mat-button (click)="dialog.closeAll()">Close</button>
+      <button mat-button >Save</button>
+    </mat-dialog-actions>
+  </form>
+
 </div>
