--- a/src/app/user-detail/user-detail.component.scss
+++ b/src/app/user-detail/user-detail.component.scss
@@ -2,6 +2,7 @@
   min-height: 200px;
   background-color: #d14a41;
   color: white;
+  position: relative;
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -22,6 +23,7 @@
 
 .detail-card-content {
     margin-top: -16px;
+    position: relative;
     h2 {
         padding: 0px 16px;
         margin: 8px 0px;
@@ -30,4 +32,12 @@
         display: flex;
         flex-direction: column;
     }
+}
+
+.moreIcon{
+  position: absolute;
+  top: 4px;
+  right: 4px;
+  cursor: pointer;
+  // border-radius: 50%;
 }
