--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,10 @@
-<p>dashboard works!</p>
+<div *ngIf="latitude && longitude">
+    <h3>Current Location</h3>
+    <p>You are in {{ currentCity }}</p>
+    <p>Latitude: {{ latitude }}</p>
+    <p>Longitude: {{ longitude }}</p>
+    <p>The temperatur of following Location is : {{ temperatureOfLocation }}&#8451;</p>
+  </div>
+  <div *ngIf="error">
+    <p>Error: {{ error }}</p>
+  </div>
