edited testing in edit-adress-component

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,6 +5,16 @@
     <p>Longitude: {{ longitude }}</p>
     <p>The temperatur of following Location is : {{ temperatureOfLocation }}&#8451;</p>
   </div>
+
+  <div>
+    <!-- <meteomatics-api-response version="3.0">
+      ...
+      </meteomatics-api-response> -->
+  </div>
+
+
+
+
   <div *ngIf="error">
     <p>Error: {{ error }}</p>
   </div>
